k8s/service/ingress-config-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmh-ingress
spec:
  rules:
  - http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: firstservice
            port:
              number: 20010
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: secondservice
            port:
              number: 20020
  ingressClassName: nginx
